--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crud-api",
+  "name": "docker-nodejs-mongo-demo",
   "version": "1.0.0",
   "description": "Demo express api with mongo dockerize",
   "main": "index.js",
@@ -7,12 +7,27 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jhony Rivero",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.2.7"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jriverox/docker-nodejs-mongo-demo.git"
+  },
+  "keywords": [
+    "nodejs",
+    "mongodb",
+    "express",
+    "docker"
+  ],
+  "bugs": {
+    "url": "https://github.com/jriverox/docker-nodejs-mongo-demo/issues"
+  },
+  "homepage": "https://github.com/jriverox/docker-nodejs-mongo-demo#readme"
 }
